@@ -1,4 +1,4 @@
-name: indimail-mta FreeBSD CI
+name: indimail-mta FreeBSD2 CI
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - '**/indimail-mta-x/**'
       - '**/libdkim2-x/**'
       - '**/libsrs2-x/**'
-      - .github/workflows/indimail-mta-freebsd.yml
+      - .github/workflows/indimail-mta-freebsd2.yml
       - '!**/indimail-mta-x/indimail-mta.spec.in'
       - '!**/libdkim2-x/libdkim2.spec.in'
       - '!**/libsrs2-x/libsrs2.spec.in'
@@ -25,27 +25,28 @@ on:
 
 jobs:
   testfreebsd:
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    name: FreeBSD
+    runs-on: macos-12
+    name: FreeBSD2
+    timeout-minutes: 60 # randomly bootloops https://github.com/vmactions/freebsd-vm/issues/74
+    env:
+      MYTOKEN : ${{ secrets.MYTOKEN }}
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
       with:
         path: main
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
       with:
         repository: mbhangui/libqmail
         path: libqmail
     - name: build indimail-mta
-      id: FreeBSD
-      uses: cross-platform-actions/action@v0.20.0
+      id: FreeBSD2
+      uses: vmactions/freebsd-vm@v0.3.1
       with:
-        operating_system: freebsd
-        version: '13.2'
+        envs: 'MYTOKEN'
+        usesh: true
+        prepare: pkg install -y curl automake autoconf libtool pkgconf libidn2 mysql80-client openldap26-client libgsasl base64
         run: |
-          freebsd-version
-          sudo pkg install -y curl automake autoconf libtool pkgconf libidn2 mysql80-client openldap26-client libgsasl base64
-          cd libqmail; ./default.configure; make; sudo make install-strip
-          cd ../main/libdkim2-x; ./default.configure; make; sudo make install-strip
-          cd ../libsrs2-x; ./default.configure; make; sudo make install-strip
+          cd libqmail; ./default.configure; make; make install-strip
+          cd ../main/libdkim2-x; ./default.configure; make; make install-strip
+          cd ../libsrs2-x; ./default.configure; make; make install-strip
           cd ../indimail-mta-x; ./default.configure; ./qmake
