@@ -281,7 +281,7 @@ control	default	used by
 .I hostaccess	\fR(none)	\fRqmail-smtpd
 .I signatures	\fR(none)	\fRqmail-smtpd
 .I bodycheck	\fR(none)	\fRqmail-smtpd
-.I qregex	\fR(none)	\fRqmail-smtpd
+.I qregex	\fR(none)	\fRqmail-smtpd, qmail-send, slowq-send, qmta-send, uacl
 .I earlytalkerdroptime	\fR(none)	\fRqmail-smtpd
 .I signaturedomains	\fR(none)	\fRqmail-dkim
 .I nosignaturedomains	\fR(none)	\fRqmail-dkim
