@@ -2032,10 +2032,19 @@ todo_do(fd_set *rfds)
 static int
 getcontrols()
 {
+	int             qregex;
+	char           *x;
+
 	if (control_init() == -1)
 		return 0;
 	if (control_readint((int *) &lifetime, "queuelifetime") == -1)
 		return 0;
+	if (!(x = env_get("QREGEX"))) {
+		if (control_readint(&qregex, "qregex") == -1)
+			return 0;
+		if (qregex && !env_put("QREGEX=1"))
+			return 0;
+	}
 	if (!queuedesc) {
 		for (queuedesc = queuedir; *queuedesc; queuedesc++);
 		for (; queuedesc != queuedir && *queuedesc != '/'; queuedesc--);
